Adds 'in parliament' flag to parties (#71)
